Fixed lec tag not showing up for lectures

--- a/code/umagellan/UMagellan/static/css/index.css
+++ b/code/umagellan/UMagellan/static/css/index.css
@@ -21,7 +21,7 @@
 }
 
 .sidebar .tab-content {
-    padding-left: 10px;
+    padding-left: 5px;
 }
 
 .sidebar .tab-pane .rem-course {
